--- a/todo.txt
+++ b/todo.txt
@@ -9,3 +9,7 @@
   - reports/upload_file - upload new report (POST) or reports/ - POST
 
 - FinancialReport: errors when no nls, cfs or bls detected
+
+- versining dataset
+  - https://stackoverflow.com/questions/2015232/database-design-for-audit-logging
+  - http://blog.jasny.net/articles/versioning-mysql-data/
