--- a/todo.txt
+++ b/todo.txt
@@ -29,3 +29,6 @@ What next?
 - refactor UI panel for parsing text (angular - one more time)
 - panels for updating data - in every possible case
 
+- algorithm for creating new formulas on the base of existing ones (reversed formulas)
+- algorithm for creating sintetic records (on the base of other records in accordance
+  with defined formulas and on the base of data from different timeranges and timestamps)
