Create model for type of financial statment. Refactor all related code.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,10 @@
-﻿TO DO:
+﻿TO_DO:
+- create synthetic records for financial recordfs of nls/cfs and bls
+- Record.project_onto_fiscal_year will decide how to project bls and ics/cfs
+- create separate model for type of financial statement
+
+
+TO DO:
 - parser
     - refactor and write tests
     - ui in dbmd
